ontol-compiler/test-cases/error/parser/use_missing_as.on
use 'foobar' // ERROR parse error: expected `as`
